--- a/crates/fuzzing/Cargo.toml
+++ b/crates/fuzzing/Cargo.toml
@@ -12,13 +12,15 @@ version = "0.1.0"
 anyhow = "1.0.22"
 arbitrary = "0.2.0"
 binaryen = "0.8.2"
-env_logger = { version = "0.7.1", optional = true }
+bincode = "1.2.1"
+clap = "2.33.0"
+env_logger = "0.7.1"
 log = "0.4.8"
+serde = { version = "1.0.101", features = ["derive"] }
+tempfile = "3.1.0"
 wasmparser = "0.45.0"
 wasmprinter = "0.2.0"
 wasmtime = { path = "../api" }
 wasmtime-environ = { path = "../environ" }
 wasmtime-jit = { path = "../jit" }
-
-[dev-dependencies]
 wat = "1.0"
