--- a/crates/runtime/Cargo.toml
+++ b/crates/runtime/Cargo.toml
@@ -24,6 +24,7 @@ cfg-if = "1.0"
 backtrace = "0.3.49"
 lazy_static = "1.3.0"
 psm = "0.1.11"
+rayon = "1.5.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3.7", features = ["winbase", "memoryapi", "errhandlingapi"] }
